react/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  labels:
    run: react
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 80
    nodePort: 30002
    protocol: TCP
    name: http
  selector:
    app: react
