react/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imageapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: imageapp.frontend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-svc
            port:
              number: 3000
  - host: imageapp.backend.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-svc
            port:
              number: 8080
